Osposobljena stranica kategorije, ali ima jos da dodavanje

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -117,7 +117,7 @@
                     <!-- Tekst o sajtu-->
                   
                     <i style="color: rgba(255, 255, 255, 0.541);">
-                        "Izaberi posao koji voliš i nećeš morati da radiš ni dana u životu!"
+                        "Pronađi posao koji voliš i nećeš morati da radiš ni dana u životu!"
                     </i>
                     <!-- /Tekst-->
                     
