--- a/views/kategorije/izmena_kategorije.ejs
+++ b/views/kategorije/izmena_kategorije.ejs
@@ -83,20 +83,27 @@
         <!-- Unos podataka -->
         <div class ='container center'>
             <!-- Forma -->
-            <form action="" method= ''>
+            <form action='/sve_kategorije/kategorija/<%-kategorija[0].id%>/izmena_kategorije' method= 'POST'>
                 <!-- Telo forme-->
                 <div class="form-group ">
                     <!-- Mesto za sliku -->
                     <div style="width: 250px; height: 150px; background-color: rgba(36, 36, 36, 0.219); "></div>
+                    <input name = 'slika' value = '<%-kategorija[0].slika%>'>
                     <!-- Button za dodavanje fajla-->
-                    <input type="file" value='dodaj' class=' mt-3 mb-3'><br>
+                    <a class ='btn btn-info m-3'>Dodaj sliku</a><br>
 
                     <!-- Ostali deo forme-->
                     <label>Naziv kategorije :</label>
-                    <input type="text" class='form-control center-style' >
+                    <input type="text" name = 'naziv' class='form-control center-style' value = '<%-kategorija[0].naziv%>' >
+                    <!-- GRESKA : Naziv kategorije vec postoji-->
+                    <% if(greska != '') {%>
+                        <p class="small text-danger"><%-greska%></p>
+                    <%}%>
+                    
+
 
                     <lavel>Kratak opis :</lavel><br>
-                    <textarea class="form-control center-style" ></textarea>
+                    <textarea name = 'kratakOpis' class="form-control center-style" ><%-kategorija[0].kratak_opis%></textarea>
                     <!-- /Ostali deo forme-->
                     <br>
                     <!-- Submit -->
