--- a/views/template/base.ejs
+++ b/views/template/base.ejs
@@ -27,11 +27,11 @@
 <!--Js fajlovi-------------------------------------------------------------------------------------------------------------------->
    
     <!--Bootstrap-->
-    <script src="dist/js/bootstrap.min.js"></script>
+    <script src="/dist/js/bootstrap.min.js"></script>
     <!--FontAwesome-->
     <script src="/js/all.js"></script>
     <!--Custom JS-->
-    <script src="javascripts/script.js"></script>
+    <script src="/javascripts/script.js"></script>
 
 </body>
 </html>
