Stranica svi_poslovi funkcioniše

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -162,7 +162,7 @@
                                 <!-- Naziv posla -->
                                 <a href=''><h5><%- posao.naziv %></h5></a>
                                 <!-- Kratak opis posla -->
-                                <p> <%- posao.kratak_opis %></p>
+                                <p class="small "> <%- posao.kratak_opis %></p>
                             </div>
                         </div>
                         <%}%>
